# odoo-mcp-xyt

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_zh.md  diagnose_connection.py  odoo_config.json.example  pyproject.toml  run_server.py  start_for_inspector.py
.github/: FUNDING.yml
.github/workflows/: publish.yml
src/odoo_mcp/: __init__.py  __main__.py  odoo_client.py  server.py
